# budai-deploy

./: .gitignore  ARCHITECTURE.md  COMBINED_READOUT.md  IMPLEMENTATION_STATUS.md  MISSING_COMPONENTS.md  README.md  README_ANALYSIS.md  pyproject.toml  railyway.md  requirements.txt  test_deployment_trigger.py
cli/: deploy.py
installer/: railway.py
shared/: __init__.py  config.py
specs/: development.yaml  production.yaml
templates/: README.md  agent-followup-.env.example  agent-followup-railway.json  agent-summarizer-.env.example  agent-summarizer-railway.json  api-gateway-.env.example  api-gateway-railway.json  orchestrator-.env.example  orchestrator-railway.json
